language/move-lang/tests/move_check/translated_ir_tests/commands/break_outside_loop.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/break_outside_loop.move:2:5 ───
   │
 2 │     break
   │     ^^^^^ Invalid usage of 'break'. 'break' can only be used inside a loop body
   │

