language/move-lang/tests/move_check/translated_ir_tests/commands/break_outside_loop.move
script {
fun main() {
    break
}
}

// check: break outside loop
